--- a/NCF/MLP基于keras的实现.ipynb
+++ b/NCF/MLP基于keras的实现.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-30T02:56:19.125149Z",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-30T02:56:21.406637Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-30T03:37:34.550601Z",
@@ -152,61 +152,37 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From /Users/jiang/.local/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:508: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
-      "\n",
-      "WARNING:tensorflow:From /Users/jiang/.local/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:68: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
-      "\n",
-      "WARNING:tensorflow:From /Users/jiang/.local/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:3814: The name tf.random_normal is deprecated. Please use tf.random.normal instead.\n",
-      "\n",
-      "WARNING:tensorflow:From /Users/jiang/.local/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:3837: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
-      "\n",
-      "WARNING:tensorflow:From /Users/jiang/.local/lib/python3.7/site-packages/keras/optimizers.py:757: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
-      "\n",
-      "WARNING:tensorflow:From /Users/jiang/.local/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:3075: The name tf.log is deprecated. Please use tf.math.log instead.\n",
-      "\n",
-      "WARNING:tensorflow:From /Users/jiang/.local/lib/python3.7/site-packages/tensorflow_core/python/ops/nn_impl.py:183: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
-      "WARNING:tensorflow:From /Users/jiang/.local/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:977: The name tf.assign_add is deprecated. Please use tf.compat.v1.assign_add instead.\n",
-      "\n",
-      "WARNING:tensorflow:From /Users/jiang/.local/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:964: The name tf.assign is deprecated. Please use tf.compat.v1.assign instead.\n",
-      "\n",
-      "WARNING:tensorflow:From /Users/jiang/.local/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:2503: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
-      "\n",
-      "WARNING:tensorflow:From /Users/jiang/.local/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:168: The name tf.get_default_session is deprecated. Please use tf.compat.v1.get_default_session instead.\n",
-      "\n",
-      "WARNING:tensorflow:From /Users/jiang/.local/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:175: The name tf.ConfigProto is deprecated. Please use tf.compat.v1.ConfigProto instead.\n",
-      "\n",
-      "WARNING:tensorflow:From /Users/jiang/.local/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:184: The name tf.global_variables is deprecated. Please use tf.compat.v1.global_variables instead.\n",
-      "\n",
-      "WARNING:tensorflow:From /Users/jiang/.local/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:193: The name tf.is_variable_initialized is deprecated. Please use tf.compat.v1.is_variable_initialized instead.\n",
-      "\n",
-      "WARNING:tensorflow:From /Users/jiang/.local/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:200: The name tf.variables_initializer is deprecated. Please use tf.compat.v1.variables_initializer instead.\n",
-      "\n",
-      "Iteration 1: 94.95s, HR = 0.5129, NDCG = 0.2805, loss = 0.3487, validated in 6.23s\n",
-      "Iteration 2: 88.64s, HR = 0.5680, NDCG = 0.3198, loss = 0.3093, validated in 5.86s\n",
-      "Iteration 3: 88.64s, HR = 0.5970, NDCG = 0.3383, loss = 0.2927, validated in 6.76s\n",
-      "Iteration 4: 97.21s, HR = 0.5965, NDCG = 0.3418, loss = 0.2832, validated in 6.68s\n",
-      "Iteration 5: 96.90s, HR = 0.6127, NDCG = 0.3517, loss = 0.2772, validated in 8.32s\n",
-      "Iteration 6: 100.20s, HR = 0.6161, NDCG = 0.3579, loss = 0.2722, validated in 7.94s\n",
-      "Iteration 7: 99.02s, HR = 0.6250, NDCG = 0.3653, loss = 0.2686, validated in 8.58s\n",
-      "Iteration 8: 108.48s, HR = 0.6632, NDCG = 0.3805, loss = 0.2655, validated in 7.73s\n",
-      "Iteration 9: 96.67s, HR = 0.6290, NDCG = 0.3654, loss = 0.2626, validated in 7.90s\n",
-      "Iteration 10: 97.90s, HR = 0.6349, NDCG = 0.3735, loss = 0.2606, validated in 6.85s\n",
-      "Iteration 11: 100.53s, HR = 0.6414, NDCG = 0.3743, loss = 0.2589, validated in 5.75s\n",
-      "Iteration 12: 95.94s, HR = 0.6434, NDCG = 0.3760, loss = 0.2571, validated in 7.72s\n",
-      "Iteration 13: 123.19s, HR = 0.6329, NDCG = 0.3704, loss = 0.2558, validated in 13.18s\n",
-      "Iteration 14: 127.44s, HR = 0.6664, NDCG = 0.3841, loss = 0.2544, validated in 15.11s\n",
-      "Iteration 15: 144.97s, HR = 0.6482, NDCG = 0.3809, loss = 0.2533, validated in 16.98s\n",
-      "Iteration 16: 144.08s, HR = 0.6469, NDCG = 0.3786, loss = 0.2522, validated in 12.94s\n",
-      "Iteration 17: 148.02s, HR = 0.6281, NDCG = 0.3760, loss = 0.2512, validated in 8.27s\n",
-      "Iteration 18: 134.20s, HR = 0.6442, NDCG = 0.3785, loss = 0.2506, validated in 8.20s\n",
-      "Iteration 19: 156.10s, HR = 0.6750, NDCG = 0.3932, loss = 0.2497, validated in 6.92s\n",
-      "Iteration 20: 136.46s, HR = 0.6571, NDCG = 0.3541, loss = 0.2518, validated in 6.93s\n",
-      "End. Best Iteration 19:  HR = 0.6750, NDCG = 0.3932. \n",
+      "Iteration 1: 67.58s, HR = 0.4985, NDCG = 0.2756, loss = 0.3491, validated in 4.13s\n",
+      "Iteration 2: 74.78s, HR = 0.5654, NDCG = 0.3184, loss = 0.3102, validated in 5.84s\n",
+      "Iteration 3: 64.15s, HR = 0.5964, NDCG = 0.3381, loss = 0.2924, validated in 4.82s\n",
+      "Iteration 4: 65.01s, HR = 0.6272, NDCG = 0.3549, loss = 0.2826, validated in 6.78s\n",
+      "Iteration 5: 64.51s, HR = 0.6166, NDCG = 0.3586, loss = 0.2755, validated in 4.69s\n",
+      "Iteration 6: 67.07s, HR = 0.6257, NDCG = 0.3614, loss = 0.2704, validated in 6.42s\n",
+      "Iteration 7: 75.08s, HR = 0.6392, NDCG = 0.3728, loss = 0.2665, validated in 6.16s\n",
+      "Iteration 8: 78.11s, HR = 0.6447, NDCG = 0.3764, loss = 0.2631, validated in 7.21s\n",
+      "Iteration 9: 74.62s, HR = 0.6430, NDCG = 0.3760, loss = 0.2606, validated in 6.49s\n",
+      "Iteration 10: 80.43s, HR = 0.6440, NDCG = 0.3755, loss = 0.2586, validated in 7.99s\n",
+      "Iteration 11: 77.98s, HR = 0.6591, NDCG = 0.3853, loss = 0.2564, validated in 7.13s\n",
+      "Iteration 12: 79.87s, HR = 0.6414, NDCG = 0.3753, loss = 0.2546, validated in 5.96s\n",
+      "Iteration 13: 76.18s, HR = 0.6384, NDCG = 0.3778, loss = 0.2533, validated in 7.01s\n",
+      "Iteration 14: 73.20s, HR = 0.6520, NDCG = 0.3832, loss = 0.2519, validated in 5.63s\n",
+      "Iteration 15: 72.93s, HR = 0.6512, NDCG = 0.3809, loss = 0.2508, validated in 7.59s\n",
+      "Iteration 16: 78.27s, HR = 0.6637, NDCG = 0.3855, loss = 0.2498, validated in 7.08s\n",
+      "Iteration 17: 76.91s, HR = 0.6450, NDCG = 0.3829, loss = 0.2487, validated in 5.94s\n",
+      "Iteration 18: 72.89s, HR = 0.6508, NDCG = 0.3863, loss = 0.2481, validated in 6.67s\n",
+      "Iteration 19: 82.26s, HR = 0.6488, NDCG = 0.3832, loss = 0.2473, validated in 7.81s\n",
+      "Iteration 20: 66.18s, HR = 0.6510, NDCG = 0.3843, loss = 0.2465, validated in 5.51s\n",
+      "End. Best Iteration 16:  HR = 0.6637, NDCG = 0.3855. \n",
       "The best MLP model is saved to models/keras_MLP_bs_256_reg_00_lr_001_n_emb_32_ll_8_dp_wodp.h5\n"
      ]
     }
@@ -343,9 +319,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:tf1] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-tf1-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -357,7 +333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.10"
   },
   "toc": {
    "base_numbering": 1,
