--- a/NCF/GMF基于keras的实现.ipynb
+++ b/NCF/GMF基于keras的实现.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-30T03:20:23.077214Z",
@@ -165,7 +165,24 @@
       "Iteration 2: 43.90s, HR = 0.6096, NDCG = 0.3423, loss = 0.2915, validated in 5.66s\n",
       "Iteration 3: 43.02s, HR = 0.6202, NDCG = 0.3505, loss = 0.2870, validated in 4.78s\n",
       "Iteration 4: 39.48s, HR = 0.6258, NDCG = 0.3517, loss = 0.2831, validated in 4.93s\n",
-      "Iteration 5: 39.76s, HR = 0.6187, NDCG = 0.3482, loss = 0.2803, validated in 4.68s\n"
+      "Iteration 5: 39.76s, HR = 0.6187, NDCG = 0.3482, loss = 0.2803, validated in 4.68s\n",
+      "Iteration 6: 40.26s, HR = 0.6298, NDCG = 0.3570, loss = 0.2796, validated in 5.31s\n",
+      "Iteration 7: 90.90s, HR = 0.6298, NDCG = 0.3583, loss = 0.2798, validated in 7.91s\n",
+      "Iteration 8: 54.74s, HR = 0.6371, NDCG = 0.3623, loss = 0.2797, validated in 6.67s\n",
+      "Iteration 9: 58.15s, HR = 0.6308, NDCG = 0.3549, loss = 0.2800, validated in 6.82s\n",
+      "Iteration 10: 57.15s, HR = 0.6310, NDCG = 0.3594, loss = 0.2806, validated in 5.66s\n",
+      "Iteration 11: 38.04s, HR = 0.6334, NDCG = 0.3597, loss = 0.2811, validated in 4.28s\n",
+      "Iteration 12: 36.78s, HR = 0.6356, NDCG = 0.3640, loss = 0.2814, validated in 5.63s\n",
+      "Iteration 13: 39.27s, HR = 0.6058, NDCG = 0.3372, loss = 0.2819, validated in 4.29s\n",
+      "Iteration 14: 37.06s, HR = 0.6482, NDCG = 0.3651, loss = 0.2822, validated in 5.63s\n",
+      "Iteration 15: 37.46s, HR = 0.6268, NDCG = 0.3588, loss = 0.2830, validated in 4.75s\n",
+      "Iteration 16: 37.47s, HR = 0.5823, NDCG = 0.3206, loss = 0.2839, validated in 4.76s\n",
+      "Iteration 17: 37.30s, HR = 0.5949, NDCG = 0.3322, loss = 0.2839, validated in 4.97s\n",
+      "Iteration 18: 38.34s, HR = 0.6305, NDCG = 0.3562, loss = 0.2843, validated in 4.71s\n",
+      "Iteration 19: 35.75s, HR = 0.6263, NDCG = 0.3542, loss = 0.2846, validated in 4.76s\n",
+      "Iteration 20: 36.79s, HR = 0.6202, NDCG = 0.3517, loss = 0.2852, validated in 4.75s\n",
+      "End. Best Iteration 14:  HR = 0.6482, NDCG = 0.3651. \n",
+      "The best GMF model is saved to models/keras_GMF_bs_256_reg_00_lr_001_n_emb_8.h5\n"
      ]
     }
    ],
